--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -9,10 +9,10 @@ spring:
   cloud:
     config:
       enabled: true
-      uri: http://localhost:7000    
+    #  uri: http://localhost:7000  
+      uri: http://10.247.72.152:7000
   banner:
     location: classpath:banner/banner.txt
-    image:
-      location: classpath:fotocreador/foto.jpeg      
+         
       
       
